objects/simpli_lv__List_View__c.object
<CustomObject>
    <fields>
        <fullName>simpli_lv__API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__All_Internal_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Internal Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Boolean_Filter__c</fullName>
        <description>This field represents an Advanced Option for a filter. Advanced Options in filters allow you to build up filtering conditions that use a mixture of AND and OR boolean operators across multiple filter line items. For example, (1 AND 2) OR 3 finds records that match both the first two filter line items or the third.</description>
        <inlineHelpText>This field represents an Advanced Option for a filter. Advanced Options in filters allow you to build up filtering conditions that use a mixture of AND and OR boolean operators across multiple filter line items. For example, (1 AND 2) OR 3 etc.</inlineHelpText>
        <label>Boolean Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Core_ListView_Columns__c</fullName>
        <description>For core SFDC list views this contains the column data created by the SFDC platform when a list view is created. For manual list views the column data is supplied by the list view creator.</description>
        <inlineHelpText>For core SFDC list views this contains the column data created by the SFDC platform when a list view is created. For manual list views the column data is supplied by the list view creator.</inlineHelpText>
        <label>ListView Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Core_ListView_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Holds the standard SFDC list view Id from which the list view data is retrieved.</description>
        <externalId>true</externalId>
        <inlineHelpText>Holds the standard SFDC list view Id from which the list view data is retrieved.</inlineHelpText>
        <label>ListView Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>simpli_lv__Core_ListView_Query__c</fullName>
        <description>For CORE list views this contains the query provided by the core Salesforce list view. For MANUAL list views the query must be supplied. For TOOLING or METADATA list views this is not required.</description>
        <inlineHelpText>For CORE list views this contains the query provided by the core Salesforce list view. For MANUAL list views the query must be supplied. For TOOLING or METADATA list views this is not required.</inlineHelpText>
        <label>ListView Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Custom_Apex_Class__c</fullName>
        <description>Holds the apex class which is used to handle list view processing. This class must be extended from ListViewCustomAbstract</description>
        <inlineHelpText>Holds the apex class which is used to handle list view processing. This class must be extended from ListViewCustomAbstract</inlineHelpText>
        <label>Custom Apex Class</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Default_Sort_Order__c</fullName>
        <label>Default Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Describe__c</fullName>
        <label>Describe</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Filter_Scope__c</fullName>
        <description>This field indicates whether you are filtering by owner or viewing all records.

Everything - All records, for example All Opportunities.
Mine - Records owned by the user running the list view, for example My Opportunities.
MineAndMyGroups - Records owned by the user running the list view, and records assigned to the user’s queues.
Queue - Records assigned to a queue.
Delegated - Records delegated to another user for action: for example, a delegated task.
MyTerritory - Records in the territory of the user seeing the list view. This option is available if territory management is enabled for your organization.
MyTeamTerritory - Records in the territory of the team of the user seeing the list view. This option is available if territory management is enabled for your organization.
Team - Records assigned to a team.</description>
        <inlineHelpText>Options are - Everything, Mine, MineAndMyGroups, Queue, Delegated, MyTerritory, MyTeamTerritory, Team</inlineHelpText>
        <label>Filter Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AssignedToMe</fullName>
                </value>
                <value>
                    <fullName>Delegated</fullName>
                </value>
                <value>
                    <fullName>Everything</fullName>
                </value>
                <value>
                    <fullName>Mine</fullName>
                </value>
                <value>
                    <fullName>MineAndMyGroups</fullName>
                </value>
                <value>
                    <fullName>MyTeamTerritory</fullName>
                </value>
                <value>
                    <fullName>MyTerritory</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>SalesTeam</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simpli_lv__Full_Name__c</fullName>
        <formula>simpli_lv__Object_Name__c &amp; &quot;.&quot; &amp;  simpli_lv__API_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Groups__c</fullName>
        <description>A list of groups with sharing access.</description>
        <inlineHelpText>A list of groups with sharing access.</inlineHelpText>
        <label>Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Is_Non_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Non-Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Is_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the listview has been marked as private by the owner</description>
        <inlineHelpText>Indicates if the listview has been marked as private by the owner</inlineHelpText>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Object_Name__c</fullName>
        <description>Object Name is required for custom manual list views</description>
        <inlineHelpText>Object Name is required for custom manual list views</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>simpli_lv__Roles_And_Subordinates__c</fullName>
        <description>A list of roles with sharing access. All roles below each of these roles in the role hierarchy also have sharing access. If portal accounts are enabled, then all roles and portal accounts below each of these roles in the role hierarchy also have sharing access.</description>
        <inlineHelpText>List of roles with sharing access. All roles below these roles in the role hierarchy also have sharing access. If portal accounts are enabled, then all roles and portal accounts below each of these roles in the role hierarchy also have sharing access.</inlineHelpText>
        <label>Roles And Subordinates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Roles__c</fullName>
        <description>A list of roles with sharing access.</description>
        <inlineHelpText>A list of roles with sharing access.</inlineHelpText>
        <label>Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Tooling</fullName>
                </value>
                <value>
                    <fullName>Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simpli_lv__Territories_And_Subordinates__c</fullName>
        <description>A list of territories with sharing access. All territories below each of these territories in the territory hierarchy also have sharing access.</description>
        <inlineHelpText>A list of territories with sharing access. All territories below each of these territories in the territory hierarchy also have sharing access.</inlineHelpText>
        <label>Territories And Subordinates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Territories__c</fullName>
        <description>A list of territories with sharing access.</description>
        <inlineHelpText>A list of territories with sharing access.</inlineHelpText>
        <label>Territories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>List View</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>simpli_lv__Core_ListView_Id__c</columns>
        <columns>simpli_lv__Custom_Apex_Class__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>simpli_lv__Subtype__c</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>simpli_lv__API_Name__c</columns>
        <columns>simpli_lv__Object_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Core</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>simpli_lv__API_Name__c</columns>
        <columns>simpli_lv__Object_Name__c</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>simpli_lv__Core_ListView_Id__c</columns>
        <columns>simpli_lv__Core_ListView_Query__c</columns>
        <columns>simpli_lv__Subtype__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>simpli_lv__List_View__c.simpli_lv__Core</value>
        </filters>
        <label>All Core</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Core_Security</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>simpli_lv__Object_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>simpli_lv__Is_Private__c</columns>
        <columns>simpli_lv__Is_Non_Editable__c</columns>
        <columns>simpli_lv__Boolean_Filter__c</columns>
        <columns>simpli_lv__Filter_Scope__c</columns>
        <columns>simpli_lv__Groups__c</columns>
        <columns>simpli_lv__Roles__c</columns>
        <columns>simpli_lv__Roles_And_Subordinates__c</columns>
        <columns>simpli_lv__Territories__c</columns>
        <columns>simpli_lv__All_Internal_Users__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>simpli_lv__List_View__c.simpli_lv__Core</value>
        </filters>
        <label>All Core - Security</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Custom</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>simpli_lv__Subtype__c</columns>
        <columns>simpli_lv__Custom_Apex_Class__c</columns>
        <columns>simpli_lv__API_Name__c</columns>
        <columns>simpli_lv__Object_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>simpli_lv__Core_ListView_Query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>simpli_lv__List_View__c.simpli_lv__Custom</value>
        </filters>
        <label>All Custom</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Metadata</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>simpli_lv__API_Name__c</columns>
        <columns>simpli_lv__Object_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>simpli_lv__Core_ListView_Query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>simpli_lv__Object_Name__c</field>
            <operation>contains</operation>
            <value>__mdt</value>
        </filters>
        <label>All Metadata</label>
    </listViews>
    <nameField>
        <displayFormat>LV-{0}</displayFormat>
        <label>Core List View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Views</pluralLabel>
    <recordTypes>
        <fullName>simpli_lv__Core</fullName>
        <active>true</active>
        <description>Holds core SFDC list views. This type should only be created by internal batch processes</description>
        <label>Core</label>
    </recordTypes>
    <recordTypes>
        <fullName>simpli_lv__Custom</fullName>
        <active>true</active>
        <description>For all custom list views created outside of the internal processes.</description>
        <label>Custom</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>